--- a/index.html
+++ b/index.html
@@ -23,9 +23,10 @@
             <li><a href="/contact.html">Contact us</a></li>
         </ul>
     </nav>
+    
     <main>
         <article>
-            <h2>It's me here, Mario</h2>
+            <h2>It's me here, Mario.</h2>
             <p>Lorem ipsum dolor sit man of steel, amet consectetur adipisicing elit. Expedita tempore, accusantium, quae illum laborum iure non ut maxime soluta aut dicta minima! Itaque excepturi dignissimos deserunt eius! Magnam, inventore dolore. Lorem ipsum dolor sit amet consectetur, adipisicing elit. Voluptates eaque at qui vitae, consectetur eveniet aspernatur error iure, aut enim optio tempora quod quo ducimus mollitia id nostrum, explicabo odit. Lorem ipsum dolor sit amet consectetur adipisicing elit. Earum maiores voluptatibus aut voluptatum placeat in libero sequi deleniti ducimus non harum inventore hic aliquam ipsum sunt, quidem quae repellat fugit! Lorem ipsum dolor sit amet consectetur adipisicing elit. Tempora beatae aspernatur temporibus labore nisi ullam iusto illo eligendi recusandae illum molestiae, doloremque atque nostrum quas, asperiores iure earum cupiditate voluptatem? Lorem ipsum dolor sit amet, consectetur adipisicing elit. Cum quod voluptatibus harum, fugit ex eos a eligendi optio ut accusantium qui aspernatur quia, voluptatum provident mollitia voluptas doloribus atque alias.</p>
         </article>
         <ul class="thumbnails">
@@ -35,7 +36,7 @@
     </main>
     <section class="join">
         <h2>Join Today!</h2>
-        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Incidunt sit numquam odio atque voluptatibus fuga, quam quibusdam magni repudiandae.</p>
+        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
         <form>
             <input type="email" name="email" placeholder="Type email & hit Enter" required>
         </form>
